[project]
name = "piel"
version = "0.0.56"
description = "Photonic Integrated Electronics: microservices to codesign photonics, electronics, communications, quantum, and more."
authors = [
    {name="Dario Quintero", email="darioaquintero@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["piel", "photonics", "electronics", "codesign", "quantum", "hardware"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.10,<3.12"
dependencies = [
  "Click>=7.0",
  "jax>=0.4.14,<0.5.0",
  "jaxlib>=0.4.14,<0.5.0",
  "matplotlib",
  "networkx>=3.1,<4.0",
  "numpy>=1.24.4,<2.0.0",
  "pandas>=1.5.3,<2.0.0",
  "pydantic>=2.0,<3.0",
  "scipy>=1.11.4,<2.0.0",
  "setuptools",
]

[tool.setuptools]
packages = ["piel"]

[project.urls]
homepage = "https://github.com/daquintero/piel"
repository = "https://github.com/daquintero/piel"

[project.optional-dependencies]
simulation = [
  "amaranth>=0.4.0,<0.5.0",
  "amaranth-yosys>=0.40.0.0.post94,<0.41.0",
  "cocotb==1.8.1",
  "gdsfactory @ git+https://github.com/daquintero/gdsfactory7.git@dario/fix_recursive_e_netlist",
  "gplugins[schematic]>=0.14.0,<0.15.0",
  "hdl21>=6.0.0,<7.0.0",
  "openlane==2.0; platform_system == 'Linux'",
  "openlane==2.0; platform_system == 'Darwin'",
  "openlane; platform_system == 'Windows'",
  "qutip>=4.7,<5.0",
  "sax==0.12.2",  # Pinned for pydantic <v2 compatibility.
  "scikit-rf>=1.1.0,<2.0.0",
  "sky130 @ git+https://github.com/daquintero/skywater130.git@dario/patch_for_rladder_gplugins",
  "sky130-hdl21>=6.0.0,<7.0.0",
  "thewalrus>=0.20.0,<0.21.0",
  "vlsirtools>=6.0.0,<7.0.0",
]
experimental = [
  "scikit-rf>=1.1.0,<2.0.0",
  "tabulate"
]
dev = [
    "amaranth>=0.4.0,<0.5.0",
    "amaranth-yosys>=0.40.0.0.post94,<0.41.0",
    "cocotb==1.8.1",
    "gdsfactory @ git+https://github.com/daquintero/gdsfactory7.git@dario/fix_recursive_e_netlist",
    "gplugins[schematic]>=0.14.0,<0.15.0",
    "hdl21>=6.0.0,<7.0.0",
    "openlane==2.0; platform_system == 'Linux'",
    "openlane==2.0; platform_system == 'Darwin'",
    "openlane; platform_system == 'Windows'",
    "qutip>=4.7,<5.0",
    "sax==0.12.2",  # Pinned for pydantic <v2 compatibility.
    "scikit-rf>=1.1.0,<2.0.0",
    "sky130 @ git+https://github.com/daquintero/skywater130.git@dario/patch_for_rladder_gplugins",
    "sky130-hdl21>=6.0.0,<7.0.0",
    "thewalrus>=0.20.0,<0.21.0",
    "vlsirtools>=6.0.0,<7.0.0",
    "bokeh",
    "bump-my-version",
    "cookiecutter",
    "coverage",
    "flake8",
    "ipyevents",
    "ipytree",
    "ipywidgets>=7.6.0,<9",
    "jupyter",
    "jupyter-bokeh",
    "jupyter-core",
    "jupyter-packaging>=0.7.9",
    "jupyterlab>=4.0.0,<5.0.0",
    "jupytext==1.15.0",
    "kfactory[git,ipy]",
    "kweb>=2.0.1,<3.0.0",
    "myst-parser",
    "nbsphinx",
    "pandoc",
    "pre-commit",
    "pytest>=3.0",
    "pydata-sphinx-theme>=0.13.3",
    "ruff==0.5.5",
    "sphinx>=7.2.1,<8.0.0",
    "sphinx-autoapi",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-book_theme",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery",
    "sphinx-pydantic",
    "sphinx-rtd-theme",
    "sphinx-version-warning",
    "sphinxcontrib-pdfembed @ git+https://github.com/SuperKogito/sphinxcontrib-pdfembed.git",
    "tabulate",
    "tox",
    "watchdog"
]

[scripts]
piel = "piel.cli:main"

[source]
pypi = { priority = "primary" }
jaxsource = { url = "https://storage.googleapis.com/jax-releases/jax_releases.html", priority = "supplemental" }

[tools.flake8]
exclude = "docs"

[tools.pytest.ini_options]
addopts = "-rav"
minversion = "6.0"
testpaths = ["tests"]
