[tool.poetry]
name = "piel"
version = "0.1.0"
description = "Photonic Integrated Electronics: microservices to codesign photonics, electronics, communications, quantum, and more."
authors = ["Dario Quintero <darioaquintero@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daquintero/piel"
repository = "https://github.com/daquintero/piel"
keywords = ["piel", "photonics", "electronics", "codesign", "quantum", "hardware"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Click = ">=7.0"
jax = ">=0.4.14,<0.5.0"
jaxlib = ">=0.4.14,<0.5.0"
jaxtyping = "*"
matplotlib = "*"
networkx = ">=3.1,<4.0"
numpy = ">=1.24.4,<2.0.0"
pandas = ">=1.5.3,<2.0.0"
pydantic = ">=2.0,<3.0"
scipy = ">=1.11.4,<2.0.0"
setuptools = "*"
xarray = ">=2024.1.0,<2024.10.0"

# TOOLS
amaranth = { version = ">=0.4.0,<0.5.0", optional = true }
amaranth-yosys = { version = ">=0.40.0.0.post94,<0.41.0", optional = true }
cocotb = { version = "==1.9.1", optional = true }
gdsfactory = { version = "7.27.1", extras = ["schematic"], optional = true }
gplugins = { version = ">=0.14.0,<0.15.0", extras = ["schematic"], optional = true }
hdl21 = { version = ">=6.0.0,<7.0.0", optional = true }
qutip = { version = ">=4.7,<5.0", optional = true }
sax = { version = "==0.12.2", optional = true }  # Pinned for pydantic <v2 compatibility
tabulate = { version = "*", optional = true }
scikit-rf = { version = ">=1.1.0,<2.0.0", optional = true }
# sky130 = { git = "https://github.com/daquintero/skywater130.git", branch = "dario/patch_for_rladder_gplugins", optional = true } # Depreciated until gdsfactory8
sky130-hdl21 = { version = ">=6.0.0,<7.0.0", optional = true }
thewalrus = { version = ">=0.20.0,<0.21.0", optional = true }
vlsirtools = { version = ">=6.0.0,<7.0.0", optional = true }

# DEVELOPMENT
bokeh = { version = "*", optional = true }
bump-my-version = { version = "*", optional = true }
devtools = { version = "*", optional = true }
cookiecutter = { version = "*", optional = true }
coverage = { version = "*", optional = true }
flake8 = { version = "*", optional = true }
ipyevents = { version = "*", optional = true }
ipytree = { version = "*", optional = true }
ipywidgets = { version = ">=7.6.0,<9", optional = true }
jupyter = { version = "*", optional = true }
jupyter-bokeh = { version = "*", optional = true }
jupyter-core = { version = "*", optional = true }
jupyter-packaging = { version = ">=0.7.9", optional = true }
jupyterlab = { version = ">=4.0.0,<5.0.0", optional = true }
jupytext = { version = "1.15.0", optional = true }
kfactory = { version = "*", extras = ["git", "ipy"], optional = true }
kweb = { version = ">=2.0.1,<3.0.0", optional = true }
myst-parser = { version = "*", optional = true }
nbsphinx = { version = "*", optional = true }
pandoc = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }
pytest = { version = ">=3.0", optional = true }
pydata-sphinx-theme = { version = ">=0.13.3", optional = true }
ruff = { version = "==0.5.5", optional = true }
sphinx = { version = ">=7.2.1,<8.0.0", optional = true }
sphinx-autoapi = { version = "*", optional = true }
sphinx-autobuild = { version = "*", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
sphinx-book_theme = { version = "*", optional = true }
sphinx-copybutton = { version = ">=0.5.2", optional = true }
sphinx-gallery = { version = "*", optional = true }
sphinx-pydantic = { version = "*", optional = true }
sphinx-rtd-theme = { version = "*", optional = true }
sphinx-version-warning = { version = "*", optional = true }
sphinxcontrib-pdfembed = { git = "https://github.com/SuperKogito/sphinxcontrib-pdfembed.git", optional = true }
tox = { version = "*", optional = true }
watchdog = { version = "*", optional = true }

[tool.poetry.extras]
tools = [
  "amaranth",
  "amaranth-yosys",
  "cocotb",
  "gdsfactory",
  "gplugins",
  "hdl21",
  "qutip",
  "sax",
  "tabulate",
  "scikit-rf",
  "sky130",
  "sky130-hdl21",
  "thewalrus",
  "vlsirtools"
]
dev = [
  "amaranth",
  "amaranth-yosys",
  "cocotb",
  "gdsfactory",
  "gplugins",
  "hdl21",
  "openlane",
  "qutip",
  "sax",
  "tabulate",
  "scikit-rf",
  "sky130",
  "sky130-hdl21",
  "thewalrus",
  "vlsirtools",
  "bokeh",
  "bump-my-version",
  "devtools",
  "cookiecutter",
  "coverage",
  "flake8",
  "ipyevents",
  "ipytree",
  "ipywidgets",
  "jupyter",
  "jupyter-bokeh",
  "jupyter-core",
  "jupyter-packaging",
  "jupyterlab",
  "jupytext",
  "kfactory",
  "kweb",
  "myst-parser",
  "nbsphinx",
  "pandoc",
  "pre-commit",
  "pytest",
  "pydata-sphinx-theme",
  "ruff",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-autodoc-typehints",
  "sphinx-book_theme",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx-pydantic",
  "sphinx-rtd-theme",
  "sphinx-version-warning",
  "sphinxcontrib-pdfembed",
  "tox",
  "watchdog"
]

[tool.poetry.scripts]
piel = "piel.cli:main"
poetry = "poetry.console.application:main"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "jaxsource"
priority = "supplemental"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations

[tool.flake8]
exclude = "docs"

[tool.pytest.ini_options]
addopts = "-rav"
minversion = "6.0"
testpaths = ["tests/"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"piel/units/string.py" = ["F403", "F405"]
"**/{tests,docs,tools}/*" = ["E402", "F401", "F841"]
